oberon.output
Useless nonterminals

   ASSIGNMENT
   STATEMENT
   STATEMENT_SEQUENCE


Terminals which are not used

   ASSIGN
   ';'


Useless rules

   24 ASSIGNMENT: IDENT ASSIGN EXPRESSION

   25 STATEMENT: ASSIGNMENT

   26 STATEMENT_SEQUENCE: STATEMENT
   27                   | STATEMENT_SEQUENCE ';' STATEMENT


Grammar

    0 $accept: SELECTOR $end

    1 SELECTOR: '[' EXPRESSION ']'
    2         | /* empty */

    3 FACTOR: IDENT SELECTOR
    4       | NUMBER
    5       | '(' EXPRESSION ')'
    6       | '~' FACTOR

    7 TERM: FACTOR
    8     | TERM '*' FACTOR
    9     | TERM DIV FACTOR
   10     | TERM MOD FACTOR
   11     | TERM '&' FACTOR

   12 SIMPLE_EXPRESSION: '+' TERM
   13                  | '-' TERM
   14                  | SIMPLE_EXPRESSION '+' TERM
   15                  | SIMPLE_EXPRESSION '-' TERM
   16                  | SIMPLE_EXPRESSION OR TERM

   17 EXPRESSION: SIMPLE_EXPRESSION
   18           | SIMPLE_EXPRESSION '=' SIMPLE_EXPRESSION
   19           | SIMPLE_EXPRESSION '#' SIMPLE_EXPRESSION
   20           | SIMPLE_EXPRESSION '<' SIMPLE_EXPRESSION
   21           | SIMPLE_EXPRESSION LSEQ SIMPLE_EXPRESSION
   22           | SIMPLE_EXPRESSION '>' SIMPLE_EXPRESSION
   23           | SIMPLE_EXPRESSION GREQ SIMPLE_EXPRESSION


Terminals, with rules where they appear

$end (0) 0
'#' (35) 19
'&' (38) 11
'(' (40) 5
')' (41) 5
'*' (42) 8
'+' (43) 12 14
'-' (45) 13 15
';' (59)
'<' (60) 20
'=' (61) 18
'>' (62) 22
'[' (91) 1
']' (93) 1
'~' (126) 6
error (256)
NUMBER (258) 4
IDENT (259) 3
MOD (260) 10
DIV (261) 9
OR (262) 16
LSEQ (263) 21
GREQ (264) 23
ASSIGN (265)


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
SELECTOR (26)
    on left: 1 2, on right: 0 3
FACTOR (27)
    on left: 3 4 5 6, on right: 6 7 8 9 10 11
TERM (28)
    on left: 7 8 9 10 11, on right: 8 9 10 11 12 13 14 15 16
SIMPLE_EXPRESSION (29)
    on left: 12 13 14 15 16, on right: 14 15 16 17 18 19 20 21 22 23
EXPRESSION (30)
    on left: 17 18 19 20 21 22 23, on right: 1 5


state 0

    0 $accept: . SELECTOR $end

    '['  shift, and go to state 1

    $default  reduce using rule 2 (SELECTOR)

    SELECTOR  go to state 2


state 1

    1 SELECTOR: '[' . EXPRESSION ']'

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 5
    EXPRESSION         go to state 6


state 2

    0 $accept: SELECTOR . $end

    $end  shift, and go to state 7


state 3

   12 SIMPLE_EXPRESSION: '+' . TERM

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 12
    TERM    go to state 13


state 4

   13 SIMPLE_EXPRESSION: '-' . TERM

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 12
    TERM    go to state 14


state 5

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   17 EXPRESSION: SIMPLE_EXPRESSION .
   18           | SIMPLE_EXPRESSION . '=' SIMPLE_EXPRESSION
   19           | SIMPLE_EXPRESSION . '#' SIMPLE_EXPRESSION
   20           | SIMPLE_EXPRESSION . '<' SIMPLE_EXPRESSION
   21           | SIMPLE_EXPRESSION . LSEQ SIMPLE_EXPRESSION
   22           | SIMPLE_EXPRESSION . '>' SIMPLE_EXPRESSION
   23           | SIMPLE_EXPRESSION . GREQ SIMPLE_EXPRESSION

    OR    shift, and go to state 15
    LSEQ  shift, and go to state 16
    GREQ  shift, and go to state 17
    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '='   shift, and go to state 20
    '#'   shift, and go to state 21
    '<'   shift, and go to state 22
    '>'   shift, and go to state 23

    $default  reduce using rule 17 (EXPRESSION)


state 6

    1 SELECTOR: '[' EXPRESSION . ']'

    ']'  shift, and go to state 24


state 7

    0 $accept: SELECTOR $end .

    $default  accept


state 8

    4 FACTOR: NUMBER .

    $default  reduce using rule 4 (FACTOR)


state 9

    3 FACTOR: IDENT . SELECTOR

    '['  shift, and go to state 1

    $default  reduce using rule 2 (SELECTOR)

    SELECTOR  go to state 25


state 10

    5 FACTOR: '(' . EXPRESSION ')'

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 5
    EXPRESSION         go to state 26


state 11

    6 FACTOR: '~' . FACTOR

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 27


state 12

    7 TERM: FACTOR .

    $default  reduce using rule 7 (TERM)


state 13

    8 TERM: TERM . '*' FACTOR
    9     | TERM . DIV FACTOR
   10     | TERM . MOD FACTOR
   11     | TERM . '&' FACTOR
   12 SIMPLE_EXPRESSION: '+' TERM .

    MOD  shift, and go to state 28
    DIV  shift, and go to state 29
    '*'  shift, and go to state 30
    '&'  shift, and go to state 31

    $default  reduce using rule 12 (SIMPLE_EXPRESSION)


state 14

    8 TERM: TERM . '*' FACTOR
    9     | TERM . DIV FACTOR
   10     | TERM . MOD FACTOR
   11     | TERM . '&' FACTOR
   13 SIMPLE_EXPRESSION: '-' TERM .

    MOD  shift, and go to state 28
    DIV  shift, and go to state 29
    '*'  shift, and go to state 30
    '&'  shift, and go to state 31

    $default  reduce using rule 13 (SIMPLE_EXPRESSION)


state 15

   16 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION OR . TERM

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 12
    TERM    go to state 32


state 16

   21 EXPRESSION: SIMPLE_EXPRESSION LSEQ . SIMPLE_EXPRESSION

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 33


state 17

   23 EXPRESSION: SIMPLE_EXPRESSION GREQ . SIMPLE_EXPRESSION

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 34


state 18

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION '+' . TERM

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 12
    TERM    go to state 35


state 19

   15 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION '-' . TERM

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 12
    TERM    go to state 36


state 20

   18 EXPRESSION: SIMPLE_EXPRESSION '=' . SIMPLE_EXPRESSION

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 37


state 21

   19 EXPRESSION: SIMPLE_EXPRESSION '#' . SIMPLE_EXPRESSION

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 38


state 22

   20 EXPRESSION: SIMPLE_EXPRESSION '<' . SIMPLE_EXPRESSION

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 39


state 23

   22 EXPRESSION: SIMPLE_EXPRESSION '>' . SIMPLE_EXPRESSION

    '+'  shift, and go to state 3
    '-'  shift, and go to state 4

    SIMPLE_EXPRESSION  go to state 40


state 24

    1 SELECTOR: '[' EXPRESSION ']' .

    $default  reduce using rule 1 (SELECTOR)


state 25

    3 FACTOR: IDENT SELECTOR .

    $default  reduce using rule 3 (FACTOR)


state 26

    5 FACTOR: '(' EXPRESSION . ')'

    ')'  shift, and go to state 41


state 27

    6 FACTOR: '~' FACTOR .

    $default  reduce using rule 6 (FACTOR)


state 28

   10 TERM: TERM MOD . FACTOR

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 42


state 29

    9 TERM: TERM DIV . FACTOR

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 43


state 30

    8 TERM: TERM '*' . FACTOR

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 44


state 31

   11 TERM: TERM '&' . FACTOR

    NUMBER  shift, and go to state 8
    IDENT   shift, and go to state 9
    '('     shift, and go to state 10
    '~'     shift, and go to state 11

    FACTOR  go to state 45


state 32

    8 TERM: TERM . '*' FACTOR
    9     | TERM . DIV FACTOR
   10     | TERM . MOD FACTOR
   11     | TERM . '&' FACTOR
   16 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION OR TERM .

    MOD  shift, and go to state 28
    DIV  shift, and go to state 29
    '*'  shift, and go to state 30
    '&'  shift, and go to state 31

    $default  reduce using rule 16 (SIMPLE_EXPRESSION)


state 33

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   21 EXPRESSION: SIMPLE_EXPRESSION LSEQ SIMPLE_EXPRESSION .

    OR   shift, and go to state 15
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 21 (EXPRESSION)


state 34

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   23 EXPRESSION: SIMPLE_EXPRESSION GREQ SIMPLE_EXPRESSION .

    OR   shift, and go to state 15
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 23 (EXPRESSION)


state 35

    8 TERM: TERM . '*' FACTOR
    9     | TERM . DIV FACTOR
   10     | TERM . MOD FACTOR
   11     | TERM . '&' FACTOR
   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION '+' TERM .

    MOD  shift, and go to state 28
    DIV  shift, and go to state 29
    '*'  shift, and go to state 30
    '&'  shift, and go to state 31

    $default  reduce using rule 14 (SIMPLE_EXPRESSION)


state 36

    8 TERM: TERM . '*' FACTOR
    9     | TERM . DIV FACTOR
   10     | TERM . MOD FACTOR
   11     | TERM . '&' FACTOR
   15 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION '-' TERM .

    MOD  shift, and go to state 28
    DIV  shift, and go to state 29
    '*'  shift, and go to state 30
    '&'  shift, and go to state 31

    $default  reduce using rule 15 (SIMPLE_EXPRESSION)


state 37

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   18 EXPRESSION: SIMPLE_EXPRESSION '=' SIMPLE_EXPRESSION .

    OR   shift, and go to state 15
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 18 (EXPRESSION)


state 38

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   19 EXPRESSION: SIMPLE_EXPRESSION '#' SIMPLE_EXPRESSION .

    OR   shift, and go to state 15
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 19 (EXPRESSION)


state 39

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   20 EXPRESSION: SIMPLE_EXPRESSION '<' SIMPLE_EXPRESSION .

    OR   shift, and go to state 15
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 20 (EXPRESSION)


state 40

   14 SIMPLE_EXPRESSION: SIMPLE_EXPRESSION . '+' TERM
   15                  | SIMPLE_EXPRESSION . '-' TERM
   16                  | SIMPLE_EXPRESSION . OR TERM
   22 EXPRESSION: SIMPLE_EXPRESSION '>' SIMPLE_EXPRESSION .

    OR   shift, and go to state 15
    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 22 (EXPRESSION)


state 41

    5 FACTOR: '(' EXPRESSION ')' .

    $default  reduce using rule 5 (FACTOR)


state 42

   10 TERM: TERM MOD FACTOR .

    $default  reduce using rule 10 (TERM)


state 43

    9 TERM: TERM DIV FACTOR .

    $default  reduce using rule 9 (TERM)


state 44

    8 TERM: TERM '*' FACTOR .

    $default  reduce using rule 8 (TERM)


state 45

   11 TERM: TERM '&' FACTOR .

    $default  reduce using rule 11 (TERM)
